--- a/web/css/base/_helpers.less
+++ b/web/css/base/_helpers.less
@@ -35,9 +35,9 @@
     .shrink-0 { flex-shrink: 0; }
     .grow-0 { flex-grow: 0; }
 
-    .hide,
     .no-display,
-    .abs-no-display { display: none !important; }
+    .abs-no-display { display: none; }
+    .hide { display: none !important; }
     .show { display: revert !important; }
     .flex { display: flex !important; }
     .abs-visually-hidden {
